# revmng

./: CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
assets/: charts.py  framework.py
revmng/: __init__.py  _result.py  _stats.py  group.py  los.py  metrics.py  network.py  optimal.py  overbooking.py  plot.py  pricing.py  singleleg.py
tests/: test_crosscheck.py  test_group.py  test_los.py  test_metrics.py  test_network.py  test_optimal.py  test_overbooking.py  test_plot.py  test_pricing.py  test_singleleg.py  test_stats.py  test_validation_suite.py  validation_cases.json
