[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "revmng"
version = "0.1.0"
description = "Revenue management for Python: single-leg seat protection (Littlewood, EMSR-a/b), overbooking, pricing, network bid prices and the standard performance metrics. Computed from standard methods and validated against published worked examples."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Atakan Arikan" }]
requires-python = ">=3.10"
dependencies = []
keywords = [
    "revenue-management", "yield-management", "pricing", "overbooking",
    "emsr", "littlewood", "bid-price", "newsvendor", "airline", "hotel",
    "capacity-control", "revpar",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Office/Business :: Financial",
]

[project.optional-dependencies]
network = ["scipy>=1.7"]
plot = ["matplotlib>=3.5"]
dev = ["pytest>=7", "ruff", "build", "scipy>=1.7", "matplotlib>=3.5"]

[project.urls]
Homepage = "https://github.com/arikanatakan/revmng"
Repository = "https://github.com/arikanatakan/revmng"
Issues = "https://github.com/arikanatakan/revmng/issues"

[tool.setuptools.packages.find]
include = ["revmng*"]

[tool.setuptools.package-data]
revmng = ["py.typed"]

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
